--- a/XwingTurnRunner/XwingTurnRunner.csproj
+++ b/XwingTurnRunner/XwingTurnRunner.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.1.1" />
+    <PackageReference Include="morelinq" Version="4.0.0" />
+  </ItemGroup>
+
 </Project>
