--- a/XwingTurnRunner/XwingTurnRunner.csproj
+++ b/XwingTurnRunner/XwingTurnRunner.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="morelinq" Version="4.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="XWingStateMachine\Bombs\" />
+  </ItemGroup>
+
 </Project>
